{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 1008,
  "lineage": "3ab29b83-39bd-4cb5-c157-616d92c5b800",
  "resources": [
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-019637a6da5afc485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019637a6da5afc485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "state": "available",
            "tags": {
              "Name": "pw-101-default-main-private-eu-west-2a"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-0f94294924c74299d",
            "description": "Security group for ECS Service pw-101-default-wp-service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f94294924c74299d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c082158ed494e571"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pw-101-default-wp-service-service-20260422131557603800000007",
            "name_prefix": "pw-101-default-wp-service-service-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pw-101-default-wp-service-service"
            },
            "tags_all": {
              "Name": "pw-101-default-wp-service-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-0f94294924c74299d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0567eb7b098dd9914",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0567eb7b098dd9914",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0f94294924c74299d",
            "security_group_rule_id": "sgr-0567eb7b098dd9914",
            "tags": {
              "Name": "pw-101-default-wp-service-service-all"
            },
            "tags_all": {
              "Name": "pw-101-default-wp-service-service-all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0567eb7b098dd9914",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-03e18a1d68aa90852",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "http from ALB",
            "from_port": 80,
            "id": "sgr-03e18a1d68aa90852",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c082158ed494e571",
            "region": "eu-west-2",
            "security_group_id": "sg-0f94294924c74299d",
            "security_group_rule_id": "sgr-03e18a1d68aa90852",
            "tags": {
              "Name": "pw-101-default-wp-service-service-alb_ingress"
            },
            "tags_all": {
              "Name": "pw-101-default-wp-service-service-alb_ingress"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-03e18a1d68aa90852",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/pw-101-default-wp-frontend/5295aeb1d0725725",
            "arn_suffix": "app/pw-101-default-wp-frontend/5295aeb1d0725725",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pw-101-default-wp-frontend-343539590.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/pw-101-default-wp-frontend/5295aeb1d0725725",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pw-101-default-wp-frontend",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0c082158ed494e571"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035c2aa46d4f67805"
              },
              {
                "subnet_id": "subnet-074bd6df3c77a161a"
              },
              {
                "subnet_id": "subnet-0c9ae55584d6bcdbf"
              }
            ],
            "subnets": [
              "subnet-035c2aa46d4f67805",
              "subnet-074bd6df3c77a161a",
              "subnet-0c9ae55584d6bcdbf"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01f09ae87ad996a2e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/pw-101-default-wp-frontend/5295aeb1d0725725"
          },
          "dependencies": [
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/pw-101-default-wp-service/974a554ef296e104",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/pw-101-default-wp-frontend/5295aeb1d0725725",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12"
          },
          "dependencies": [
            "module.elb-wp-frontend.aws_lb.this",
            "module.elb-wp-frontend.aws_lb_target_group.this",
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http/allow_with_header",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/pw-101-default-wp-service/974a554ef296e104",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/696d2f8ba1bb7d62",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Allow",
                    "regex_values": [],
                    "values": [
                      "super_secret_token"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/696d2f8ba1bb7d62",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12",
            "priority": 1,
            "region": "eu-west-2",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/696d2f8ba1bb7d62"
          },
          "dependencies": [
            "module.elb-wp-frontend.aws_lb.this",
            "module.elb-wp-frontend.aws_lb_listener.this",
            "module.elb-wp-frontend.aws_lb_target_group.this",
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "http/deny_all",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/641155831da46576",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/641155831da46576",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12",
            "priority": 2,
            "region": "eu-west-2",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener-rule/app/pw-101-default-wp-frontend/5295aeb1d0725725/0f5e8c268c900b12/641155831da46576"
          },
          "dependencies": [
            "module.elb-wp-frontend.aws_lb.this",
            "module.elb-wp-frontend.aws_lb_listener.this",
            "module.elb-wp-frontend.aws_lb_target_group.this",
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pw-101-default-ecs-wp-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/pw-101-default-wp-service/974a554ef296e104",
            "arn_suffix": "targetgroup/pw-101-default-wp-service/974a554ef296e104",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/pw-101-default-wp-service/974a554ef296e104",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/pw-101-default-wp-frontend/5295aeb1d0725725"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pw-101-default-wp-service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/pw-101-default-wp-service/974a554ef296e104"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-0c082158ed494e571",
            "description": "Security group for pw-101-default-wp-frontend application load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "ECS access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f94294924c74299d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c082158ed494e571",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic from CloudFront only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pw-101-default-wp-frontend-20260422131555880600000004",
            "name_prefix": "pw-101-default-wp-frontend-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-0c082158ed494e571",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0146c9471e90cbfb1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS access",
            "from_port": 80,
            "id": "sgr-0146c9471e90cbfb1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f94294924c74299d",
            "region": "eu-west-2",
            "security_group_id": "sg-0c082158ed494e571",
            "security_group_rule_id": "sgr-0146c9471e90cbfb1",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0146c9471e90cbfb1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-wp-frontend",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloudfront_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-016ee3d6f61504a24",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic from CloudFront only",
            "from_port": 80,
            "id": "sgr-016ee3d6f61504a24",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0c082158ed494e571",
            "security_group_rule_id": "sgr-016ee3d6f61504a24",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-016ee3d6f61504a24",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.elb-wp-frontend.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_wp_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-03151458b208e9fe9",
            "description": "Control traffic to/from RDS Aurora pw-101-default-wp-cluster",
            "egress": [],
            "id": "sg-03151458b208e9fe9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f94294924c74299d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "pw-101-default-wp-cluster-20260422131556487300000006",
            "name_prefix": "pw-101-default-wp-cluster-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pw-101-default-wp-cluster"
            },
            "tags_all": {
              "Name": "pw-101-default-wp-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-03151458b208e9fe9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_wp_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_from_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-09b6d89e6c5197913",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-09b6d89e6c5197913",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f94294924c74299d",
            "region": "eu-west-2",
            "security_group_id": "sg-03151458b208e9fe9",
            "security_group_rule_id": "sgr-09b6d89e6c5197913",
            "tags": {
              "Name": "pw-101-default-wp-cluster-ingress_from_ecs"
            },
            "tags_all": {
              "Name": "pw-101-default-wp-cluster-ingress_from_ecs"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-09b6d89e6c5197913",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.rds_wp_db.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:network-acl/acl-07743113cad4c7732",
            "default_network_acl_id": "acl-07743113cad4c7732",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07743113cad4c7732",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "subnet_ids": [
              "subnet-019637a6da5afc485",
              "subnet-035c2aa46d4f67805",
              "subnet-074bd6df3c77a161a",
              "subnet-0abb6c1fae2d31d72",
              "subnet-0c9ae55584d6bcdbf",
              "subnet-0dc65bbf433e7e20b"
            ],
            "tags": {
              "Name": "pw-101-default-main-default"
            },
            "tags_all": {
              "Name": "pw-101-default-main-default"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-04caf271ca01eb225",
            "default_route_table_id": "rtb-04caf271ca01eb225",
            "id": "rtb-04caf271ca01eb225",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "pw-101-default-main-default"
            },
            "tags_all": {
              "Name": "pw-101-default-main-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-0ebf71ad63a999ccd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ebf71ad63a999ccd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pw-101-default-main-default"
            },
            "tags_all": {
              "Name": "pw-101-default-main-default"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a9a94dcc1ad271",
            "arn": "arn:aws:ec2:eu-west-2:055706347965:elastic-ip/eipalloc-031a9a94dcc1ad271",
            "association_id": "eipassoc-0aa7d146688a2e235",
            "domain": "vpc",
            "id": "eipalloc-031a9a94dcc1ad271",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-078840577535ddd88",
            "private_dns": "ip-10-0-101-203.eu-west-2.compute.internal",
            "private_ip": "10.0.101.203",
            "public_dns": "ec2-16-60-56-165.eu-west-2.compute.amazonaws.com",
            "public_ip": "16.60.56.165",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-eu-west-2a"
            },
            "tags_all": {
              "Name": "pw-101-default-main-eu-west-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:internet-gateway/igw-08230bc8dfb565be1",
            "id": "igw-08230bc8dfb565be1",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main"
            },
            "tags_all": {
              "Name": "pw-101-default-main"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a9a94dcc1ad271",
            "association_id": "eipassoc-0aa7d146688a2e235",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02cdcb0b99e97d1c2",
            "network_interface_id": "eni-078840577535ddd88",
            "private_ip": "10.0.101.203",
            "public_ip": "16.60.56.165",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035c2aa46d4f67805",
            "tags": {
              "Name": "pw-101-default-main-eu-west-2a"
            },
            "tags_all": {
              "Name": "pw-101-default-main-eu-west-2a"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b27c9e1f4d222c281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cdcb0b99e97d1c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0b27c9e1f4d222c28",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0b27c9e1f4d222c28"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08230bc8dfb565be1",
            "id": "r-rtb-0116a44a5135fc6521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0116a44a5135fc652",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0116a44a5135fc652"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-0b27c9e1f4d222c28",
            "id": "rtb-0b27c9e1f4d222c28",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02cdcb0b99e97d1c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pw-101-default-main-private"
            },
            "tags_all": {
              "Name": "pw-101-default-main-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtb-0b27c9e1f4d222c28",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-0116a44a5135fc652",
            "id": "rtb-0116a44a5135fc652",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08230bc8dfb565be1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pw-101-default-main-public"
            },
            "tags_all": {
              "Name": "pw-101-default-main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtb-0116a44a5135fc652",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04371663c5f17522c",
            "region": "eu-west-2",
            "route_table_id": "rtb-0b27c9e1f4d222c28",
            "subnet_id": "subnet-019637a6da5afc485"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-04371663c5f17522c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f202bf73a0d48810",
            "region": "eu-west-2",
            "route_table_id": "rtb-0b27c9e1f4d222c28",
            "subnet_id": "subnet-0abb6c1fae2d31d72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-0f202bf73a0d48810",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056ca5f82a945bd19",
            "region": "eu-west-2",
            "route_table_id": "rtb-0b27c9e1f4d222c28",
            "subnet_id": "subnet-0dc65bbf433e7e20b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-056ca5f82a945bd19",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006ac1172453f693f",
            "region": "eu-west-2",
            "route_table_id": "rtb-0116a44a5135fc652",
            "subnet_id": "subnet-035c2aa46d4f67805"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-006ac1172453f693f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024bb1de8d5ad5d65",
            "region": "eu-west-2",
            "route_table_id": "rtb-0116a44a5135fc652",
            "subnet_id": "subnet-074bd6df3c77a161a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-024bb1de8d5ad5d65",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a46fcfe786652a9",
            "region": "eu-west-2",
            "route_table_id": "rtb-0116a44a5135fc652",
            "subnet_id": "subnet-0c9ae55584d6bcdbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-00a46fcfe786652a9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-019637a6da5afc485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019637a6da5afc485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "pw-101-default-main-private-eu-west-2a"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-019637a6da5afc485",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0abb6c1fae2d31d72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abb6c1fae2d31d72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "pw-101-default-main-private-eu-west-2b"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0abb6c1fae2d31d72",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0dc65bbf433e7e20b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc65bbf433e7e20b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "pw-101-default-main-private-eu-west-2c"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0dc65bbf433e7e20b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-035c2aa46d4f67805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035c2aa46d4f67805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "pw-101-default-main-public-eu-west-2a"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-035c2aa46d4f67805",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-074bd6df3c77a161a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074bd6df3c77a161a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "pw-101-default-main-public-eu-west-2b"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-074bd6df3c77a161a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0c9ae55584d6bcdbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9ae55584d6bcdbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "pw-101-default-main-public-eu-west-2c"
            },
            "vpc_id": "vpc-01f09ae87ad996a2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0c9ae55584d6bcdbf",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:vpc/vpc-01f09ae87ad996a2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07743113cad4c7732",
            "default_route_table_id": "rtb-04caf271ca01eb225",
            "default_security_group_id": "sg-0ebf71ad63a999ccd",
            "dhcp_options_id": "dopt-0054277ad6c5fc41e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f09ae87ad996a2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04caf271ca01eb225",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "tags": {
              "Name": "pw-101-default-main"
            },
            "tags_all": {
              "Name": "pw-101-default-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "vpc-01f09ae87ad996a2e",
            "region": "eu-west-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}